--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,4 @@ x64/Debug/CherryEngine.pdb
 .vs/CherryEngine/FileContentIndex/796df7dc-b887-4140-9b7e-aff18f7e17fc.vsidx
 .vs/CherryEngine/FileContentIndex/61963ead-3fd9-4699-95d9-784999fe3381.vsidx
 .vs/CherryEngine/FileContentIndex/3e55a6bb-57d9-44b8-9db1-792e1d3c4ecd.vsidx
+*.vsidx
