--- a/CherryEngine/CherryEngine.vcxproj.filters
+++ b/CherryEngine/CherryEngine.vcxproj.filters
@@ -19,6 +19,9 @@
     <Filter Include="Header Files\Logger">
       <UniqueIdentifier>{e7916b94-122e-44f4-9e1a-37b12da1f1c3}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\DebugRenderer">
+      <UniqueIdentifier>{7f87f391-7dd7-4c3f-80ce-95af9630fecb}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -30,11 +33,11 @@
     <ClCompile Include="Player.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="FPSRenderer.cpp">
-      <Filter>Header Files\FPSRenderer</Filter>
-    </ClCompile>
     <ClCompile Include="Logger.cpp">
       <Filter>Header Files\Logger</Filter>
+    </ClCompile>
+    <ClCompile Include="DebugRenderer.cpp">
+      <Filter>Header Files\DebugRenderer</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -44,11 +47,11 @@
     <ClInclude Include="Player.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="FPSRenderer.h">
-      <Filter>Header Files\FPSRenderer</Filter>
-    </ClInclude>
     <ClInclude Include="Logger.h">
       <Filter>Header Files\Logger</Filter>
+    </ClInclude>
+    <ClInclude Include="DebugRenderer.h">
+      <Filter>Header Files\DebugRenderer</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
